--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -42,21 +42,190 @@
 	}
 }
 
-form.create-group, form.create-student, form.create-new-plan, form.edit-teacher {
+form.create-group, form.create-student, form.create-new-plan, form.edit-teacher, form.edit-plan {
 	display: flex;
 	flex-direction: column;
+
+	.label-group {
+		flex-direction: column;
+		margin: 0.75em 0.5em;
+		padding: 0.5em;
+
+		.split {
+			display: grid;
+			grid-template-columns: 1fr;
+			grid-auto-rows: min-content;
+			grid-gap: 0.5em;
+			grid-template-areas:
+				"title"
+				"desc"
+				"input"
+				"status";
+
+			@include for-tablet-landscape-up {
+				grid-template-columns: 3fr 1fr;
+				grid-template-areas:
+					"title filler"
+					"desc filler"
+					"input status";
+			}
+
+			.input-area {
+				display: flex;
+				grid-area: input;
+
+				> label {
+					margin: 0 0;
+				}
+			}
+
+			.status-area {
+				display: flex;
+				grid-area: status;
+
+				i {
+					display: flex;
+					font-size: 1.8em;
+					align-self: center;
+				}
+
+				span {
+					display: flex;
+					font-weight: 400;
+				}
+			}
+
+			.desc-area {
+				display: flex;
+				grid-area: desc;
+			}
+
+			.title-area {
+				display: flex;
+				grid-area: title;
+
+				> span {
+					font-size: 1.1em;
+					font-weight: 400;
+				}
+			}
+		}
+
+		&.success {
+			.split {
+				.status-area {
+					i {
+						color: #388e3c;
+					}
+				}
+			}
+		}
+
+		&.loading {
+			.split {
+				.status-area {
+					@keyframes spin {
+						0% {
+							transform: rotate(0deg);
+						}
+						
+						100% {
+							transform: rotate(359deg);
+						}
+					}
+
+					i {
+						color: #37474f;
+						font-size: 1.5em;
+						animation: spin 2s linear infinite;
+					}
+				}
+			}
+		}
+
+		&.error {
+			background: #ffe4e4;
+
+			.split {
+				.input-area {
+					input.text-field, textarea {
+						background: white;
+					}
+				}
+
+				.status-area {
+					flex-direction: column;
+	
+					i {
+						color: #d32f2f;
+					}
+				}
+			}
+		}
+	}
+
+	textarea {
+		flex-grow: 1;
+		min-height: 8em;
+		background: white;
+		outline: none;
+		border: 1px dashed $bcn_light_orange;
+		padding: 0.5em;
+		font-size: 1.06em;
+		margin-top: 0.1em;
+		resize: vertical;
+	
+		&:focus {
+			border: 1px solid $bcn_light_orange;
+		}
+	}
 
 	label {
 		display: flex;
 		flex-direction: column;
 		margin: 0.75em 0.5em;
+		flex-grow: 1;
 
-		> span {
-			font-size: 0.9em;
+		input[type="radio"], input[type="checkbox"]{
+			display: none;
 		}
 
-		.radio {
+		input[type="radio"] + div.radio-box {
+			border: 2px solid #999;
+			border-radius: 50%;
+			height: 1.2em;
+			width: 1.2em;
+			display: flex;
+			flex-grow: 0;
+			padding: 0;
+		}
+
+		input[type="checkbox"] + div.check-box {
+			border: 2px solid #999;
+			height: 1.2em;
+			width: 1.2em;
+			display: flex;
+			flex-grow: 0;
+			padding: 0;
+		}
+
+		input[type="radio"]:checked + div.radio-box {
+			background: #4899e1 content-box;
+			padding: 0.2em;
+		}
+
+		input[type="checkbox"]:checked + div.check-box {
+			background: #4899e1 content-box;
+			padding: 0.2em;
+		}
+
+		div.check-box:hover, div.radio-box:hover {
+			background: #e2e2e2;
+		}
+
+		&.inline {
 			margin: 0.5em 0;
+			flex-direction: row;
 			align-items: center;
 
 			> span {
@@ -64,6 +233,46 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher 
 				margin: 0 0.35em;
 			}
 		}
+
+		&.required {
+			position: relative;
+	
+			input, textarea, select {
+				padding: 0.5em 4.5em 0.5em 0.5em;
+			}
+	
+			&:after {
+				position: absolute;
+				color: #d32f2f;
+				content: "Required";
+				right: 1em;
+				margin-top: 0.53em;
+				line-height: 1.06em;
+				padding: 0.2em;
+				pointer-events: none;
+			}
+		}
+
+		&.word-count {
+			position: relative;
+	
+			input, textarea, select {
+				padding: 0.5em 4.5em 0.5em 0.5em;
+			}
+
+			span.count {
+				position: absolute;
+				right: 1em;
+				bottom: 1em;
+				line-height: 1.06em;
+				padding: 0.2em;
+				pointer-events: none;
+			}
+		}
+	}
+
+	input, textarea, select {
+		font-family: $monospace_font;
 	}
 
 	small {
@@ -74,13 +283,13 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher 
 	input.text-field {
 		margin: 0.1em 0;
 		padding: 0.5em;
-		font-size: 1.2em;
+		font-size: 1.06em;
 		border: none;
 		outline: none;
-		border-bottom: 1px solid $bcn_light_orange;
+		border: 1px solid $bcn_light_orange;
 
 		&:focus {
-			box-shadow: 0 1.5px $bcn_light_orange;
+			box-shadow: 0 2px $bcn_light_orange;
 		}
 	}
 
@@ -88,53 +297,45 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher 
 		position: relative;
 
 		&:before {
-			font-family: "fontello";
+			font-family: "fontello-beaconing";
 			content: '\f107';
 			position: absolute;
 			right: 0;
-			font-size: 1.6em;
-			padding: 0.8em;
+			font-size: 1.4em;
+			padding: 0.35em;
 			pointer-events: none;
+		}
+
+		&.required {
+			select {
+				padding: 0.5em 5.4em 0.5em 0.5em;
+			}
+
+			&:after {
+				right: 1.75em;
+			}
 		}
 
 		select {
 			width: 100%;
 			margin: 0.1em 0;
 			padding: 0.5em;
-			font-size: 1.2em;
+			font-size: 1.06em;
 			background: none;
 			outline: none;
-			border: none;
-			border-bottom: 1px solid $bcn_light_orange;
+			border: 1px solid $bcn_light_orange;
 			-moz-appearance: none;
 			-webkit-appearance: none;
 			appearance: none;
 	
 			&:focus {
-				box-shadow: 0 1.5px $bcn_light_orange;
+				box-shadow: 0 2px $bcn_light_orange;
 			}
 		}
 	}
 }
 
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: $placeholder_colour;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+::placeholder {
    color: $placeholder_colour;
    opacity: 1;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color: $placeholder_colour;
-   opacity: 1;
-}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color: $placeholder_colour;
-}
-::-ms-input-placeholder { /* Microsoft Edge */
-   color: $placeholder_colour;
-}
-
-::placeholder { /* Most modern browsers support this now. */
-   color: $placeholder_colour;
 }
